Fix header menu layout bug: cart icon

--- a/public/stylesheets/layout/_header.scss
+++ b/public/stylesheets/layout/_header.scss
@@ -33,6 +33,12 @@
         display: none;
     }
 
+    .header__menu-cart{
+        img{
+            margin-left: 6px;
+        }
+    }
+
     @at-root #{&}__func{
         text-align: right;
         margin-left: 0;
